--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
                         <img src="" class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="img/lossy-page1-640px-Caetano_Veloso_no_III_Festival_da_Música_Popular.tif.jpg"
-                            class="img-fluid rounded-5" loading="lazy">
+                        <img src="img/justin-bieber-photo-30.jpg"
+                            class="img-Quirinale.it-3_52a7d1.webp">
                     </div>
                 </div>
              </div>
