--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class=" p-5">
 
         <nav class="container d-flex justify-content-between align-items-center" >
-            <img src="img/gettyimages-1414522826.webp" class="nav-img " loading="lazy">
+            <img src="imagem/gettyimages-1414522826.webp" class="nav-img " loading="lazy">
             <ul class="nav mt-5">
                 <li class="nav-item"><a class="nav-link" href="#inicio">Início</a></li>
                 <li class="nav-item"><a class="nav-link" href="#galeria">Galeria</a></li>
@@ -40,13 +40,13 @@
             <div class="inicio-fundo d-flex justify-content-between align-items-center">
                 <div class="esquerda-conteudo">
                     <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindas a</h1>
-                    <img src="img/images.jpeg" class="mb-3" width="563"
+                    <img src="imagem/images.jpeg" class="mb-3" width="563"
                         height="278" loading="lazy">
                     <a href="#justin bieber"
                         class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
                         conhecer!</a>
                 </div>
-                <img src="img/justin_bieber_in_2015.jpg" alt="A imagem apresenta o cantor justin bieber em um show segurando o microfone " title="justin bieber - CC0 Domínio Público / Acervo Arquivo Nacional" class="img-fluid img-inicio">
+                <img src="imagem/justin_bieber_in_2015.jpg" alt="A imagem apresenta o cantor justin bieber em um show segurando o microfone " title="justin bieber - CC0 Domínio Público / Acervo Arquivo Nacional" class="img-fluid img-inicio">
 
               </div>
         </section>
@@ -54,7 +54,7 @@
         <section id="Justin bieber" class="my-5 pt-6 secao-Justin bieber" tabindex="0" aria-label="Seção explicativa sobre a Justin bieber">
             <div class="container d-flex align-items-center ">
                 <div class="col-4 d-flex justify-content-center ">
-                    <img src="img/justin_bieber.jpg" class="rounded-pill" width="273" height="331" loading="lazy">
+                    <img src="imagem/justin_bieber.jpg" class="rounded-pill" width="273" height="331" loading="lazy">
                 </div>
                 <div class="col-5">
                     <h2>O que foi o Justin bieber?</h2>
@@ -73,11 +73,11 @@
 
                 <div class="row justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="img/justin-bieber-photo-30.jpg"
-                            class="img-fluid rounded-5" loading="lazy">
+                        <img src="imagem/justin-bieber-photo-30.jpg"
+                            class="imagem-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="img/Quirinale.it-3_52a7d1.webp" class="img-fluid rounded-5"
+                        <img src="imagem/Quirinale.it-3_52a7d1.webp" class="img-fluid rounded-5"
                             loading="lazy">
                     </div>
                 </div>
@@ -86,8 +86,8 @@
                         <img src="" class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="img/justin-bieber-photo-30.jpg"
-                            class="img-Quirinale.it-3_52a7d1.webp">
+                        <img src="imagem/justin-bieber-photo-30.jpg"
+                            class="imagem/Quirinale.it-3_52a7d1.webp">
                     </div>
                 </div>
              </div>
