--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <header class=" p-5">
 
         <nav class="container d-flex justify-content-between align-items-center" >
-            <img src="imagem/gettyimages-1414522826.webp" class="nav-img " loading="lazy">
+            <img src="imagem/gettyimages-1414522826.webp" class="mb-3"  width="563"
+            height="278" loading="lazy">
             <ul class="nav mt-5">
                 <li class="nav-item"><a class="nav-link" href="#inicio">Início</a></li>
                 <li class="nav-item"><a class="nav-link" href="#galeria">Galeria</a></li>
@@ -40,7 +41,7 @@
             <div class="inicio-fundo d-flex justify-content-between align-items-center">
                 <div class="esquerda-conteudo">
                     <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindas a</h1>
-                    <img src="imagem/images.jpeg" class="mb-3" width="563"
+                    <img src="imagem/images.jpeg" class="rounded-pill" width="180" height="100" loading="lazy">
                         height="278" loading="lazy">
                     <a href="#justin bieber"
                         class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
